--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 .navbar-fixed-top {
     position: fixed;
     border-color: rgba(255, 255,255,0.2);
+    background-color: #fff;
     background-color: none;
     top: 0;
     right: 0;
@@ -101,4 +102,18 @@ left: -80px;
     padding-top: calc(2 / 3 * 100%); /* aspect ratio 3:2 */
     background-size: cover;
     background-position: center;
+}
+
+/*--- About -- */
+.about_section > div > p{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+} 
+.about_section_info > p {
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
